--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
@@ -10,6 +10,61 @@
  * GNU General Public License for more details.
  */
 
+&soc {
+	i2c@78b8000 {
+		max17050@36 {
+			status = "ok";
+			compatible = "maxim,max17050";
+			reg = <0x36>;
+			interrupt-parent = <&msm_gpio>;
+			interrupts = <58 2>;
+			pinctrl-names = "default";
+			pinctrl-0 = <&fuel_int_default>;
+
+			maxim,rsns-microohm = <10000>;
+			maxim,ext_batt_psy;
+			maxim,full-soc = <99>;
+			maxim,empty-soc = <0>;
+
+			maxim,model = [A0 50 AA C0 AD 80 B4 10
+					B5 00 B7 B0 B8 20 B8 90
+					BC 30 BC 80 C3 40 C3 90
+					CB 40 CC 80 D6 D0 D7 90
+					00 C0 01 70 01 D0 04 40
+					08 E0 2D B0 09 20 0C 20
+					0C C0 11 20 0C C0 08 50
+					06 60 06 90 0A A0 0A A0
+					01 00 01 00 01 00 01 00
+					01 00 01 00 01 00 01 00
+					01 00 01 00 01 00 01 00
+					01 00 01 00 01 00 01 00];
+
+			maxim,relaxcfg = <0x506B>;
+			maxim,config = <0x2100>;
+			maxim,filtercfg = <0x87A4>;
+			maxim,learncfg = <0x2606>;
+			maxim,misccfg = <0x0870>;
+			maxim,fullsocthr = <0x5F00>;
+			maxim,rcomp0 = <0x004F>;
+			maxim,tempco = <0x2F35>;
+			maxim,tempnom = <0x1400>;
+			maxim,tgain = <0xE932>;
+			maxim,toff = <0x2381>;
+			maxim,ichgterm = <0x00C0>;
+			maxim,vempty = <0x964C>;
+			maxim,qrtable00 = <0x0D84>;
+			maxim,qrtable10 = <0x0A08>;
+			maxim,qrtable20 = <0x0884>;
+			maxim,qrtable30 = <0x0584>;
+			maxim,capacity = <0x0320>;
+			maxim,vf_fullcap = <0x0320>;
+			maxim,temperature = <0x1400>;
+			maxim,dpacc = <0x0C80>;
+			maxim,param-version = <0x2>;
+		};
+	};
+};
+
 &pm8916_chg {
 	status = "ok";
 	qcom,vddmax-mv = <4425>;
