arm/dt: swordfish: configure PMIC MPP4 pin for usb_id adc input
Change-Id: Idcc58c38d728f689cb4d92bc182a79a3324a577a
Signed-off-by: kinam119.kim <kinam119.kim@lge.com>
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
@@ -192,4 +192,28 @@
 	qcom,thermal-mitigation = <0>; /* disabled */
 	qcom,cool-bat-decidegc = <0>;  /* disabled */
 	qcom,warm-bat-decidegc = <0>;  /* disabled */
+	usbid-pullup-gpio = <&msm_gpio 98 0x00>;
+};
+
+&pm8916_vadc {
+	chan@13 {
+		label = "usb_id";
+		qcom,calibration-type = "absolute";
+		qcom,decimation = <0x0>;
+		qcom,fast-avg-setup = <0x0>;
+		qcom,hw-settle-time = <0x0>;
+		qcom,pre-div-channel-scaling = <0x0>;
+		qcom,scale-function = <0x0>;
+		reg = <0x13>;
+	};
+};
+
+&pm8916_mpps {
+	mpp@a300 { // MPP 4 For PM_USB_ID ADC
+		qcom,mode = <4>;      // MODE_CTL: ANALOG_INPUT
+		qcom,invert = <1>;    // MODE_CTL: ANALOG Enable
+		qcom,master-en = <1>; // EN_CTL: MPP Enabled
+		qcom,ain-route = <3>; // ANA_IN_CTL: HKADC8
+		qcom,src-sel = <0>;   // MODE_CTL: Source 0
+	};
 };
