--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-panel.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-panel.dtsi
@@ -43,7 +43,7 @@
 		qcom,esd-check-enabled;
 		qcom,mdss-dsi-on-command = [
 					15 01 00 00 00 00 02 53 20 /* Display Control */
-					39 01 00 00 00 00 03 51 B4 00
+					39 01 00 00 00 00 03 51 01 00
 					05 01 00 00 78 00 01 11 /* Sleep out */
 					15 01 00 00 00 00 02 5C 20 /* Image Enhancement Control*/
 					39 01 00 00 00 00 02 5E 0B
@@ -60,7 +60,8 @@
 					39 01 00 00 00 00 09 D8
 					61 3F 70 84 85 85
 					69 25
-					05 01 00 00 00 00 01 35 /* TE On */
+					];
+		qcom,mdss-dsi-post-panel-on-command = [
 					05 01 00 00 00 00 01 29 /* Display On */
 					];
 		qcom,mdss-dsi-off-command = [
