--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pinctrl.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pinctrl.dtsi
@@ -43,6 +43,66 @@
 			};
 		};
 
+		pmx_mdss {
+			mdss_dsi_active: mdss_dsi_active {
+				mux {
+					pins = "gpio25", "gpio38";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio25", "gpio38";
+					drive-strength = <8>; /* 8 mA */
+					bias-disable = <0>; /* no pull */
+					output-high;
+				};
+			};
+
+			mdss_dsi_suspend: mdss_dsi_suspend {
+				mux {
+					pins = "gpio25", "gpio38";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio25", "gpio38";
+					drive-strength = <2>; /* 2 mA */
+					bias-pull-down; /* pull down */
+					output-low;
+				};
+			};
+		};
+
+		pmx_mdss_te {
+			mdss_te_active: mdss_te_active {
+				mux {
+					pins = "gpio24";
+					function = "mdp_vsync";
+				};
+
+				config {
+					pins = "gpio24";
+					drive-strength = <2>; /* 2 mA */
+					bias-pull-down; /* pull down */
+					input-debounce = <0>;
+				};
+			};
+
+			mdss_te_suspend: mdss_te_suspend {
+				mux {
+					pins = "gpio24";
+					function = "mdp_vsync";
+				};
+
+				config {
+					pins = "gpio24";
+					drive-strength = <2>; /* 2 mA */
+					bias-pull-down; /* pull down */
+					input-debounce = <0>;
+				};
+			};
+		};
+
 		spi0 {
 			spi0_default: spi0_default {
 				mux {
