ARM: swordfish: Enable Fuel Gauge MAX17050
Change-Id: Id2fe6e90dbe6d94d59906e4c9f7714dbbb7edd8e
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/configs/swordfish_defconfig
+++ b/arch/arm/configs/swordfish_defconfig
@@ -236,6 +236,7 @@ CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
 CONFIG_POWER_SUPPLY=y
+CONFIG_BATTERY_MAX17050=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_BATTERY_BCL=y
