Power: battery-tm: introduce battery temperature monitoring
Introduce a battery temperature monitor which can monitor
the battery temperature and reduce charging current
or stop charging according to the threshold temperature.

Change-Id: I9063f7b3de948dc2263e539ff53c509c59daa570
Signed-off-by: sm.pyen <sm.pyen@lge.com>
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -613,6 +613,14 @@ config MSM_BCL_PERIPHERAL_CTL
 	  provides routines to configure and monitor the BCL
 	  PMIC peripheral.
 
+config BATTERY_TEMP_MONITOR
+	bool "Battery Temperature Monitoring driver"
+	depends on THERMAL_QPNP_ADC_TM
+	default n
+	help
+	  Say Y to enable battery temperature control for safety.
+	  It controls charging current depending on battery temperature.
+
 source "drivers/power/reset/Kconfig"
 
 endif # POWER_SUPPLY
