--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -81,3 +81,4 @@ obj-$(CONFIG_MSM_BCL_CTL)	+= msm_bcl.o
 obj-$(CONFIG_MSM_BCL_PERIPHERAL_CTL) += bcl_peripheral.o
 obj-$(CONFIG_POWER_RESET)	+= reset/
 obj-$(CONFIG_ARCH_MSM)		+= qcom/
+obj-$(CONFIG_BATTERY_TEMP_MONITOR)     += battery-tm.o
