ARM: swordfish: Enable battery temperature monitoring
Change-Id: Id7c02db6e8c99052fe83f649caef05d5aa536c43
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/configs/swordfish_defconfig
+++ b/arch/arm/configs/swordfish_defconfig
@@ -241,6 +241,7 @@ CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB1360_CHARGER_FG=y
 CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_LINEAR_CHARGER=y
+CONFIG_BATTERY_TEMP_MONITOR=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
