--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
@@ -63,6 +63,23 @@
 			maxim,param-version = <0x2>;
 		};
 	};
+
+	battery_tm {
+		compatible = "battery_tm";
+		status = "ok";
+		qcom,batt-tm-adc_tm = <&pm8916_adc_tm>;
+		qcom,charger = <&pm8916_chg>;
+		tm,low-vreg-mv = <4100>;
+		tm,low-current-ma = <200>;
+		tm,warm-cfg = <
+			 (-50) (-100) (450) 0 1
+			 (450)  (430) (550) 1 2
+			 (550)  (430) (600) 2 2
+			 (600)  (430) (790) 3 2>;
+		tm,cool-cfg = <
+			(-100) (-300) (-50) 2 7
+			 (430) (-100) (450) 0 1>;
+	};
 };
 
 &pm8916_chg {
