arm/dt: swordfish: Add a parameter for checking EOC
Change-Id: Icde21637ce08b1e6a455a31d4e3485a1ed876d24
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pm.dtsi
@@ -89,6 +89,7 @@
 	qcom,vinmin-mv = <4470>;
 	qcom,ibatsafe-ma = <540>;
 	qcom,tchg-mins = <480>;
+	qcom,iterm-ma = <30>;
 	qcom,btc-disabled;
 	qcom,thermal-mitigation = <0>; /* disabled */
 	qcom,cool-bat-decidegc = <0>;  /* disabled */
