arm/dt: swordfish: Add initial synatics touch bringup
Change-Id: I1d8033958bbf3e1e49562ace82125041dd700b87
Signd-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish.dtsi
@@ -12,6 +12,7 @@
 
 #include "../qcom/msm8909.dtsi"
 #include "msm8909-swordfish-pinctrl.dtsi"
+#include "msm8909-swordfish-input.dtsi"
 
 / {
 	aliases {
