--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-pm8916-swordfish.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-pm8916-swordfish.dtsi
@@ -23,6 +23,23 @@
 	};
 };
 
+&soc {
+	ramoops {
+		compatible = "ramoops";
+		mem-size = <0x80000>;
+		mem-address = <0xa0000000>;
+		record-size = <4096>;
+		console-size = <0x40000>;
+		ftrace-size = <0x40000>;
+		dump-oops = <1>;
+	};
+
+	bootlog {
+		compatible = "bootlog";
+	};
+
+};
+
 &sdhc_1 {
 	vdd-supply = <&pm8916_l8>;
 	vdd-io-supply = <&pm8916_l5>;
