prima: Add QCOM_TDLS in Kconfig
Change-Id: I30eed2f345e1c97a45519942fd989990567902c9
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/drivers/staging/prima/Kconfig
+++ b/drivers/staging/prima/Kconfig
@@ -49,4 +49,8 @@ config ENABLE_LINUX_REG
 	bool "Enable linux regulatory feature"
 	default n
 
+config QCOM_TDLS
+	bool "Enable the Prima QCOM TDLS feature"
+	default n
+
 endif # PRIMA_WLAN || PRONTO_WLAN
