--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -16,6 +16,7 @@
 #include "msm8996-htc-nanohub-v2.dtsi"
 #include "dsi-panel-s1m1-ea8064tg.dtsi"
 #include "dsi-panel-t50.dtsi"
+#include "msm8996-audio-marlin.dtsi"
 
 &mdss_dsi0 {
 	vddio-supply = <&pm8994_lvs2>;
