camera:bring up IMX378 camera module
1.Add camera dtsi file for htc camera
2.Modify PMIC confuration

Change-Id: I77fcdcc9c36f38349a03016529745004dd549e29

--- a/arch/arm64/boot/dts/htc/msm8996-htc_t50.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_t50.dtsi
@@ -18,6 +18,7 @@
 #include "msm8996-touch-t50.dtsi"
 #include "msm8996-key-t50.dtsi"
 #include "msm8996-audio-t50.dtsi"
+#include "msm8996-camera-sensor-t50_xc.dtsi"
 
 / {
 	model = "HTC Corporation. MSM8996 v3 + PMI8996 T50";
