sound: soc: bring up audio prototype
1. Set differnet soundcard name for lunchbox and prototype
2. Bring up new speaker amplifier

BUG: 27657213

Change-Id: Ic99dfa636f0d23dae83ccf19d98666d99d64298b
Signed-off-by: justin_weng <justin_weng@htc.com>

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -868,4 +868,11 @@ config SND_SOC_MSM_HDMI_CODEC_RX
 config SND_SOC_MSM_HDMI_DBA_CODEC_RX
 	bool "HDMI DBA Audio Playback"
 	depends on MSM_DBA
+
+#HTC_AUD_START
+config SND_SOC_TFA98XX
+	tristate
+	default y
+#HTC_AUD_END
+
 endmenu
