arm64: dts: Touch: enable Synaptics touch function
1. Add M1 touch device tree and includes it in msm8996-htc_marlin.dtsi.
2. Set pm8994_l21 regulator for touch switch power.

Change-Id: I6edacbb34447c9a7123d82945ff58d5c007cc4fa
Signed-off-by: bradley_chen <bradley_chen@htc.com>

--- a/arch/arm64/boot/dts/htc/msm8996-htc-regulator.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc-regulator.dtsi
@@ -37,6 +37,15 @@
 	};
 };
 
+&pm8994_l21 {
+	regulator-min-microvolt = <3300000>;
+	regulator-max-microvolt = <3300000>;
+	qcom,init-voltage = <3300000>;
+	status = "okay";
+	regulator-boot-on;
+	regulator-always-on;
+};
+
 &pm8994_l22 {
 	regulator-min-microvolt = <3300000>;
 	regulator-max-microvolt = <3300000>;
