--- a/arch/arm64/configs/marlin_defconfig
+++ b/arch/arm64/configs/marlin_defconfig
@@ -228,6 +228,7 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_UID_CPUTIME=y
 CONFIG_TI_DRV2667=y
 CONFIG_EEPROM_AT24=y
+CONFIG_FPR_FPC=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
