arm64: dts: Key: enable key function
Includes key device tree in msm8996-htc_marlin.dtsi.

Change-Id: Ia69a5b312c5916a1fed7db2b2315adf458503d04
Signed-off-by: bradley_chen <bradley_chen@htc.com>

--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -15,6 +15,7 @@
 #include "msm8996-htc-regulator.dtsi"
 #include "msm8996-htc-nanohub-v2.dtsi"
 #include "dsi-panel-s1m1-ea8064tg.dtsi"
+#include "msm8996-key-t50.dtsi"
 #include "dsi-panel-t50.dtsi"
 #include "msm8996-audio-marlin.dtsi"
 
