arm64: configs: add GT1X touch configs
Add configs to support gt1x touch.

Change-Id: I0a9e57764383f739c97b534a0f2232d72998bbcb
Signed-off-by: bradley_chen <bradley_chen@htc.com>

--- a/arch/arm64/configs/marlin_defconfig
+++ b/arch/arm64/configs/marlin_defconfig
@@ -281,6 +281,10 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_HTC=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_HTC=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_HTC=y
+CONFIG_TOUCHSCREEN_GT1X=y
+CONFIG_GT1X_TOUCHPANEL_DRIVER=y
+CONFIG_GT1X_TOUCHPANEL_UPDATE=y
+CONFIG_GT1X_TOUCHPANEL_DEBUG=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_KEYCHORD=y
