arm64: dts: enable fpc fingerprint
Change-Id: Iee6e7c8fda3c9288c3c8280659d154e1f4b4b205

--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -17,6 +17,7 @@
 #include "dsi-panel-s1m1-ea8064tg.dtsi"
 #include "msm8996-touch-m1.dtsi"
 #include "msm8996-key-t50.dtsi"
+#include "msm8996-htc-fingerprint.dtsi"
 #include "dsi-panel-t50.dtsi"
 #include "msm8996-audio-marlin.dtsi"
 
