arm64: dts: bring up 5.5" panel for Marlin (driver IC: S6E3HA3)
1440x2560 AMOLED command mode panel is now ready.

Change-Id: I3835f7b3ffd9b70810d0a759c77893e17e9dae7b
Signed-off-by: Marvin Tsai <marvin_tsai@htc.com>

--- a/arch/arm/boot/dts/qcom/msm8996-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-mtp.dtsi
@@ -14,6 +14,8 @@
 #include "msm8996-camera-sensor-mtp.dtsi"
 #include "msm8996-wsa881x.dtsi"
 
+#include "../../../../arm64/boot/dts/htc/dsi-panel-s1m1-s6e3ha3.dtsi"
+#include "../../../../arm64/boot/dts/htc/dsi-panel-t50.dtsi"
 / {
 	bluetooth: bt_qca6174 {
 		compatible = "qca,qca6174";
@@ -346,7 +348,7 @@
 };
 
 &mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&dsi_dual_sharp_video>;
+	qcom,dsi-pref-prim-pan = <&mdss_dsi_samsung_s6e3ha3_wqhd_cmd>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
 	pinctrl-0 = <&mdss_dsi_active &mdss_te_active>;
 	pinctrl-1 = <&mdss_dsi_suspend &mdss_te_suspend>;
@@ -356,7 +358,7 @@
 };
 
 &mdss_dsi1 {
-	qcom,dsi-pref-prim-pan = <&dsi_dual_sharp_video>;
+	qcom,dsi-pref-prim-pan = <&mdss_dsi_samsung_s6e3ha3_wqhd_cmd>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
 	pinctrl-0 = <&mdss_dsi_active &mdss_te_active>;
 	pinctrl-1 = <&mdss_dsi_suspend &mdss_te_suspend>;
