--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -14,10 +14,11 @@
 #include "msm8996-htc-common.dtsi"
 #include "msm8996-htc-regulator.dtsi"
 #include "msm8996-htc-nanohub-v2.dtsi"
-#include "dsi-panel-s1m1-ea8064tg.dtsi"
 #include "msm8996-touch-m1.dtsi"
 #include "msm8996-key-t50.dtsi"
 #include "msm8996-htc-fingerprint.dtsi"
+#include "dsi-panel-s1m1-ea8064tg.dtsi"
+#include "dsi-panel-s1m1-s6e3ha3.dtsi"
 #include "dsi-panel-t50.dtsi"
 #include "msm8996-audio-marlin.dtsi"
 #include "msm8996-camera-sensor-m1s1.dtsi"
