arm64: dts: use prototype battery table for M1/S1 semi-system and prototype devices.
Using M1/S1 prototype battery table before HW release M1/S1 real battery table.

Change-Id: Ied8f04b5ef4fd8a10ffd8545c69a7ed2fa0d9a41
Signed-off-by: howie_chang <howie_chang@htc.com>

--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -94,3 +94,11 @@
                 /delete-property/ wlan-ant-switch-supply;
         };
 };
+
+/{
+        qcom,battery-data {
+                qcom,batt-id-range-pct = <15>;
+                #include "batterydata-m1s1-prototype-id1.dtsi"
+                #include "batterydata-m1s1-prototype-id2.dtsi"
+        };
+};
