--- a/arch/arm/boot/dts/qcom/msm-pm8916.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pm8916.dtsi
@@ -27,8 +27,9 @@
 			compatible = "qcom,qpnp-power-on";
 			reg = <0x800 0x100>;
 			interrupts = <0x0 0x8 0x0>,
-				     <0x0 0x8 0x1>;
-			interrupt-names = "kpdpwr", "resin";
+				     <0x0 0x8 0x1>,
+				     <0x0 0x8 0x2>;
+			interrupt-names = "kpdpwr", "resin", "cblpwr";
 			qcom,pon-dbc-delay = <15625>;
 			qcom,system-reset;
 			qcom,clear-warm-reset;
@@ -48,6 +49,11 @@
 				qcom,pon-type = <1>;
 				qcom,pull-up = <1>;
 				linux,code = <114>;
+			};
+
+			qcom,pon_3 {
+				qcom,pon-type = <2>;
+				qcom,pull-up = <1>;
 			};
 		};
 
