arm64:dtsi:camera-add dtsi for m1s1 device
Modify for m1s1 prototype

Change-Id: Iddb4eba6d15fde7c2dba8d49c324d9ec8ffe12de

--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -20,6 +20,7 @@
 #include "msm8996-htc-fingerprint.dtsi"
 #include "dsi-panel-t50.dtsi"
 #include "msm8996-audio-marlin.dtsi"
+#include "msm8996-camera-sensor-m1s1.dtsi"
 
 &mdss_dsi0 {
 	vddio-supply = <&pm8994_lvs2>;
