--- a/arch/arm64/boot/dts/htc/msm8996-camera-sensor-t50_xc.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-camera-sensor-t50_xc.dtsi
@@ -104,12 +104,12 @@
         cam_sensor_rear_active: cam_sensor_rear_active {
             /* RESET, STANDBY */
             mux {
-                    pins = "gpio93", "gpio83"; /*HTC modify */
+                    pins = "gpio93"; /*HTC modify */
                     function = "gpio";
             };
 
             config {
-                pins = "gpio93", "gpio83"; /*HTC modify */
+                pins = "gpio93"; /*HTC modify */
                 bias-disable; /* No PULL */
                 drive-strength = <2>; /* 2 MA */
                 output-low; /*HTC ADD*/
@@ -118,12 +118,12 @@
         cam_sensor_rear_suspend: cam_sensor_rear_suspend{
             /* RESET, STANDBY */
             mux {
-                pins = "gpio93", "gpio83"; /*HTC modify */
+                pins = "gpio93"; /*HTC modify */
                 function = "gpio";
             };
 
             config {
-                pins = "gpio93", "gpio83"; /*HTC modify */
+                pins = "gpio93"; /*HTC modify */
                 bias-disable; /* No PULL */
                 drive-strength = <2>; /* 2 MA */
                 output-low; /*HTC ADD*/
