--- a/arch/arm64/boot/dts/htc/msm8996-htc-regulator.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc-regulator.dtsi
@@ -40,6 +40,15 @@
 			status = "okay";
 		};
 	};
+	rpm-regulator-ldoa11 {
+		status = "okay";
+		pm8994_l11: regulator-l11 {
+			regulator-min-microvolt = <1200000>;
+			regulator-max-microvolt = <1200000>;
+			qcom,init-voltage = <1200000>;
+			status = "okay";
+		};
+	};
 	rpm-regulator-ldoa14 {
 		status = "okay";
 		pm8994_l14: regulator-l14 {
