arm64:camera:Enable main camera VCM
Change-Id: I0780b0b3625341e3fb4b29c526cf16f4ea1b9664

--- a/arch/arm64/boot/dts/htc/msm8996-camera-sensor-m1s1.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-camera-sensor-m1s1.dtsi
@@ -132,6 +132,12 @@
 	};
 };
 &cci {
+actuator0: qcom,actuator@0 {
+        cell-index = <0>;
+        reg = <0x0>;
+        compatible = "qcom,actuator";
+        qcom,cci-master = <0>;
+};
 qcom,camera@0 {
 		cell-index = <0>;
 		compatible = "qcom,camera";
@@ -139,6 +145,7 @@ qcom,camera@0 {
 		qcom,csiphy-sd-index = <0>;
 		qcom,csid-sd-index = <0>;
 		qcom,mount-angle = <90>;
+		qcom,actuator-src = <&actuator0>;
 		qcom,camera-ver = <2>;
 		cam_vdig-supply = <&pm8994_l3>;//212mA
 		cam_vana-supply =<&pm8994_l10>;//91mA
