power: qpnp-fg: dts: Correct battery temperature coefficient for temperature ADC accuracy.
Battery temperature is not accurate enough.

Bug: 28613988

Change-Id: I85c56c02c4b7497cee826bf9988be6434fbdebc5
Signed-off-by: redick_lin <redick_lin@htc.com>

--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -150,6 +150,10 @@
         qcom,hvdcp-not-support;
 };
 
+&pmi8994_fg {
+        qcom,thermal-coefficients = [97 85 62 49 5A 35];
+};
+
 /{
         qcom,battery-data {
                 qcom,batt-id-range-pct = <15>;
