--- a/arch/arm64/boot/dts/htc/msm8996-htc_sailfish.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_sailfish.dtsi
@@ -31,6 +31,10 @@
         qcom,hvdcp-not-support;
 };
 
+&pmi8994_fg {
+        qcom,thermal-coefficients = [97 85 62 49 5A 35];
+};
+
 /{
         qcom,battery-data {
                 qcom,batt-id-range-pct = <15>;
