drivers: misc: rsb: Add initial boilerplate code
- Add initial DT configurations for SPI, and code to read and write
  bytes via the SPI interface.
- Write a bunch of magic values to initialize the RSB
- This is a naive polling function. It just runs every 1ms and checks
  for motion. We may eventually want to run this only when the motion
  interrupt pin is triggered.
- Register the device with the input subsystem to report events to
  userspace

Bug: 28196904

Change-Id: Ia99d2db89197bcf7f68c77f9d482ec76aa829bbb
Signed-off-by: Prashant Malani <pmalani@google.com>

--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pinctrl.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-pinctrl.dtsi
@@ -131,7 +131,7 @@
 			spi0_cs0_active: spi0_cs0_active {
 				mux {
 					pins = "gpio10";
-					function = "blsp_spi6";
+					function = "gpio";
 				};
 				config {
 					pins = "gpio10";
