--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -746,4 +746,10 @@ config INPUT_DRV2667_HAPTICS
 	  To compile this driver as a module, choose M here: the
 	  module will be called drv260x-haptics.
 
+config RSB
+	bool "Rotating Side Button"
+	default N
+	help
+	  Enable support for Rotating Side Button
+
 endif
