--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb2.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb2.dtsi
@@ -17,3 +17,20 @@
 #include "msm8909-swordfish-panel.dtsi"
 #include "msm8909-pm8916-swordfish.dtsi"
 #include "msm8909-swordfish-sound.dtsi"
+#include "msm8909-swordfish-rsb.dtsi"
+
+&rsb {
+	rsb,vld-supply = <&pm8916_l17>;
+};
+
+&rpm_bus {
+	rpm-regulator-ldoa17 {
+		status = "okay";
+		pm8916_l17: regulator-l17 {
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			qcom,init-voltage = <3300000>;
+			status = "okay";
+		};
+	};
+};
