--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rsb.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rsb.dtsi
@@ -1,5 +1,4 @@
-/* Copyright (c) 2016, LGE Inc. All rights reserved.
- *
+ /*
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
  * only version 2 as published by the Free Software Foundation.
@@ -10,26 +9,22 @@
  * GNU General Public License for more details.
  */
 
-#include "msm8909-swordfish.dtsi"
-#include "../qcom/msm8909w-gpu.dtsi"
-#include "../qcom/msm8909-pm8916.dtsi"
-#include "../qcom/msm8909w.dtsi"
-#include "msm8909-swordfish-panel.dtsi"
-#include "msm8909-pm8916-swordfish.dtsi"
-#include "msm8909-swordfish-sound.dtsi"
+/*
+ * msm8909-swordfish-rsb: rotating side button config
+ */
 
-&fan5451x_chg {
-	status = "disabled";
-};
+&spi_0  {
+	pinctrl-names = "spi_default", "spi_sleep";
+	pinctrl-0 = <&spi0_default>;
+	pinctrl-1 = <&spi0_sleep>;
+	rsb: rsb@0 {
+		compatible = "rsb";
+		reg = <0>;
+		spi-max-frequency = <2000000>;
 
-&pm8916_chg {
-	status = "ok";
-};
+		rsb,spi-cs-gpio = <&msm_gpio 10 0x00>;
 
-&spi_0 {
-	status = "disabled";
-};
-
-&i2c_6 {
-	status = "ok";
+		pinctrl-names = "default";
+		pinctrl-0 = <&spi0_cs0_active>;
+	};
 };
