--- a/arch/arm/configs/swordfish_defconfig
+++ b/arch/arm/configs/swordfish_defconfig
@@ -196,6 +196,7 @@ CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_QSEECOM=y
+CONFIG_RSB=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_VERITY=y
