arm/dt: swordfish: Add sound support
Change-Id: I19d6a2438d4954a18e6b2e8f0d5c31e5782253fb
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1.dtsi
@@ -16,3 +16,4 @@
 #include "../qcom/msm8909w.dtsi"
 #include "msm8909-swordfish-panel.dtsi"
 #include "msm8909-pm8916-swordfish.dtsi"
+#include "msm8909-swordfish-sound.dtsi"
