--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1-hdmi.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1-hdmi.dtsi
@@ -16,6 +16,7 @@
 #include "../qcom/msm8909w.dtsi"
 #include "msm8909-swordfish-panel-hdmi.dtsi"
 #include "msm8909-pm8916-swordfish.dtsi"
+#include "msm8909-swordfish-sound.dtsi"
 #include "msm8909-swordfish-hdmi.dtsi"
 
 &i2c_1 {
