bluetooth: add device tree for bluetooth driver
Change-Id: Ie251b9e371a5b93a44bb0c8325e259e069d71331
Signed-off-by: s00129978 <s00129978@notesmail.huawei.com>

--- a/arch/arm/boot/dts/apq8009w-sawshark.dts
+++ b/arch/arm/boot/dts/apq8009w-sawshark.dts
@@ -25,6 +25,7 @@
 #include "apq8009w-sawshark/apq8009w-pm.dtsi"
 #include "apq8009w-sawshark/apq8009w-touch.dtsi"
 #include "apq8009w-sawshark/apq8009w-vibrator.dtsi"
+#include "apq8009w-sawshark/apq8009w-bt.dtsi"
 
 / {
 	model = "Qualcomm Technologies, Inc. APQ8009W-PM8916 MTP";
