--- a/arch/arm/boot/dts/apq8009w-sawshark.dts
+++ b/arch/arm/boot/dts/apq8009w-sawshark.dts
@@ -26,6 +26,7 @@
 #include "apq8009w-sawshark/apq8009w-touch.dtsi"
 #include "apq8009w-sawshark/apq8009w-vibrator.dtsi"
 #include "apq8009w-sawshark/apq8009w-bt.dtsi"
+#include "apq8009w-sawshark/apq8009w-wifi.dtsi"
 
 / {
 	model = "Qualcomm Technologies, Inc. APQ8009W-PM8916 MTP";
