--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -470,6 +470,16 @@ config SMB23X_CHARGER
 	  The driver reports the charger status via the power supply framework.
 	  A charger status change triggers an IRQ via the device STAT pin.
 
+config FAN5451X_CHARGER
+	tristate "FAN5451X Battery Charger"
+	depends on I2C
+	help
+	  Say Y to include support for FAN5451X Battery Charger.
+	  FAN5451X is a switch mode charger with power path capable of charging
+	  the battery with 3.2Amps dual input path.
+	  The driver supports USB detection, charging and
+	  reports the charger status to userspace via the power supply framework.
+
 config BATTERY_BQ28400
 	tristate "BQ28400 battery driver"
 	depends on I2C
