--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1-hdmi.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1-hdmi.dtsi
@@ -23,7 +23,6 @@
 	status = "okay";
 };
 
-
 /* pinctrl for slimport */
 &msm_gpio {
 	pmx_sp {
@@ -109,4 +108,12 @@
 			};
 		};
 	};
+};
+
+&fan5451x_chg {
+	status = "disabled";
+};
+
+&pm8916_chg {
+	status = "ok";
 };
