--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-swordfish-rev-evb1.dtsi
@@ -17,3 +17,11 @@
 #include "msm8909-swordfish-panel.dtsi"
 #include "msm8909-pm8916-swordfish.dtsi"
 #include "msm8909-swordfish-sound.dtsi"
+
+&fan5451x_chg {
+	status = "disabled";
+};
+
+&pm8916_chg {
+	status = "ok";
+};
