--- a/arch/arm/configs/swordfish_defconfig
+++ b/arch/arm/configs/swordfish_defconfig
@@ -241,6 +241,7 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_BATTERY_MAX17050=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB1360_CHARGER_FG=y
+CONFIG_FAN5451X_CHARGER=y
 CONFIG_BATTERY_BCL=y
 CONFIG_QPNP_LINEAR_CHARGER=y
 CONFIG_BATTERY_TEMP_MONITOR=y
