--- a/arch/arm64/boot/dts/htc/batterydata-m1s1-prototype-id1.dtsi
+++ b/arch/arm64/boot/dts/htc/batterydata-m1s1-prototype-id1.dtsi
@@ -16,7 +16,7 @@ qcom,m1s1-prototype-id1-batterydata {
 	qcom,nom-batt-capacity-mah = <3000>;
 	qcom,batt-id-kohm = <10>;
 	qcom,battery-beta = <4360>;
-	qcom,battery-type = "m1s1_prototype_id1";
+	qcom,battery-type = "1";
 	qcom,chg-rslow-comp-c1 = <3186249>;
 	qcom,chg-rslow-comp-c2 = <4434205>;
 	qcom,chg-rs-to-rslow = <1149489>;
