--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -268,6 +268,11 @@ config BATTERY_RX51
 	  Say Y here to enable support for battery information on Nokia
 	  RX-51, also known as N900 tablet.
 
+config HTC_BATT
+        bool "htc feature for debug and testing"
+        help
+          Say Y to enable htc battery debug flag series.
+
 config CHARGER_ISP1704
 	tristate "ISP1704 USB Charger Detection"
 	depends on USB_PHY
