DTSI:Add panel configure for simulate 1.2 display
Add a Dtsi dsi_auo_rm69080_hvga_cmd, used for simulate 1.2 display at sturgeon.
If user set fastboot flag use fastboot command, will init display via this dtsi
configuration.

Change-Id: I1a708ff250ba3dbb0c2c34674606afa95a3c4946
Signed-off-by: Zhao Xuewen <zhaoxuewen@huawei.com>

--- a/arch/arm/boot/dts/apq8026-sturgeon/apq8026-sturgeon-panel.dtsi
+++ b/arch/arm/boot/dts/apq8026-sturgeon/apq8026-sturgeon-panel.dtsi
@@ -12,6 +12,7 @@
 
 #include "dsi-panel-edo-rm67160-hvga-video.dtsi"
 #include "dsi-panel-auo-rm69080-hvga-video.dtsi"
+#include "dsi-panel-auo-rm69080-hvga-small.dtsi"
 #include "dsi-panel-edo-rm67160-hvga-video-old.dtsi"
 
 &mdss_dsi0 {
@@ -21,6 +22,10 @@
 };
 
 &dsi_auo_rm69080_hvga_video{
+	qcom,cont-splash-enabled;
+};
+
+&dsi_auo_rm69080_hvga_small{
 	qcom,cont-splash-enabled;
 };
 
