--- a/arch/arm/boot/dts/msm8909w-sculpin/sculpin-dsi-panel-auo-amoled-cmd.dtsi
+++ b/arch/arm/boot/dts/msm8909w-sculpin/sculpin-dsi-panel-auo-amoled-cmd.dtsi
@@ -69,6 +69,7 @@
 		qcom,mdss-dsi-bllp-eof-power-mode;
 		qcom,mdss-dsi-bllp-power-mode;
 		qcom,mdss-dsi-lane-0-state;
+		qcom,mdss-tear-check-frame-rate = <5700>;
 		qcom,mdss-dsi-te-pin-select = <1>;
 		qcom,mdss-dsi-te-v-sync-rd-ptr-irq-line = <0x2c>;
 		qcom,mdss-dsi-te-dcs-command = <1>;
