configs: switch from CONFIG_CNSS_PCI to CONFIG_CNSS
Change needed to fix break while ingesting AU156.

Change-Id: I694f99ffc29786955d7789562946b662a00ec225

--- a/arch/arm64/configs/marlin_defconfig
+++ b/arch/arm64/configs/marlin_defconfig
@@ -269,7 +269,7 @@ CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_USBNET=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CNSS_CRYPTO=y
-CONFIG_CNSS_PCI=y
+CONFIG_CNSS=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_BUS_AUTO_SUSPEND=y
 CONFIG_HTC_WLAN_NV=y
