--- a/arch/arm/boot/dts/msm8909-swordfish/msm8909-pm8916-swordfish.dtsi
+++ b/arch/arm/boot/dts/msm8909-swordfish/msm8909-pm8916-swordfish.dtsi
@@ -107,14 +107,13 @@
 	};
 };
 
-&rpm_bus {
-	rpm-regulator-ldoa10 {
-		status = "okay";
-		pm8916_l10: regulator-l10 {
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			qcom,init-voltage = <3300000>;
-			status = "okay";
-		};
-	};
+&pm8916_l6 {
+	regulator-always-on; /* Always on for sensor hub */
+};
+
+&pm8916_l10 {
+	regulator-min-microvolt = <3300000>;
+	regulator-max-microvolt = <3300000>;
+	qcom,init-voltage = <3300000>;
+	status = "okay";
 };
