arm64: dts: Correct SSC power rail to LVS1
Bug:28606927

Change-Id: Ib519549b2a45c8ab236b5e03427daeaabd71e40b
Signed-off-by: rick.ct_chen <rick.ct_chen@htc.com>

--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -162,6 +162,12 @@
         };
 };
 
+&soc {
+	qcom,ssc@1c00000 {
+		vdd_px-supply = <&pm8994_lvs1>;
+	};
+};
+
 &pmi8994_haptics {
 	status = "okay";
 	qcom,wave-play-rate-us = <4878>;
