power: battery: Disable hvdcp and hvdcp3 support in HLOS
Bug: 28613988

Change-Id: I3868d455c8d2dd7a7cfa1ac09f32b32b77cfb2bf
Signed-off-by: redick_lin <redick_lin@htc.com>

--- a/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_marlin.dtsi
@@ -146,6 +146,10 @@
     };
 };
 
+&pmi8994_charger {
+        qcom,hvdcp-not-support;
+};
+
 /{
         qcom,battery-data {
                 qcom,batt-id-range-pct = <15>;
