--- a/arch/arm64/boot/dts/htc/msm8996-htc_sailfish.dtsi
+++ b/arch/arm64/boot/dts/htc/msm8996-htc_sailfish.dtsi
@@ -27,6 +27,10 @@
 				0x00 0x18>;
 };
 
+&pmi8994_charger {
+        qcom,hvdcp-not-support;
+};
+
 /{
         qcom,battery-data {
                 qcom,batt-id-range-pct = <15>;
